2008-05-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Revert OpenJDK patches
	last and use -p1.
	* Makefile.in: Regenerated.
	* patches/icedtea-ant.patch,
	* patches/icedtea-core-build.patch,
	* patches/icedtea-libraries.patch,
	* patches/icedtea-memory-limits.patch,
	* patches/icedtea-static-libstdc++.patch,
	* patches/icedtea-sunsrc.patch,
	* patches/icedtea-zero-build.patch:
	Updated for b26.

2008-05-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-headers.patch: Updated
	for OpenJDK b26.
	
2008-05-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/openjdk-color.patch: Add
	OpenJDK color patch from Java2D tree.
	
2008-05-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Add support for reverting
	OpenJDK patches.
	* Makefile.in: Regenerated.
	* patches/icedtea-copy-plugs.patch: Updated
	for OpenJDK7 b26.
	
2008-05-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Add support for using
	OpenJDK patches (diffs from non-master
	repositories)
	* Makefile.in: Regenerated.
	
2008-05-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Move build back to using
	OpenJDK Mercurial repository after merge,
	and upgrade to b26.
	* Makefile.in: Regenerated.
	
2008-05-16  Mark Wielaard  <mark@klomp.org>

	* patches/icedtea-sparc.patch: Merge os_linux_sparc.cpp patch hunks.

2008-05-15  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-sparc.patch: New.
	* Makefile.am: Add the icedtea-sparc patch.
	* acinclude.m4: Don't default to the zero port on sparc.
	* Makefile.in, configure: Regenerated.

2008-05-14  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/security/CertsInfoPane.java: Fix certificate
	viewer null pointer.

2008-05-09  Mark Wielaard  <mwielaard@redhat.com>

	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound:
	Import Gervill fixes from CVS. See CHANGES.txt.
	Check isConversionSupported() in