@@ -1,3 +1,15 @@
+2008-05-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* generated/java/lang/UNIXProcess.java:
+	Removed.
+	* Makefile.am:
+	Copy appropriate UNIXProcess.java to generated. 
+	* Makefile.in: Regenerated.
+	* acinclude.m4:
+	(SET_OS): Work out the BUILD_OS variable. 
+	* configure: Regenerated.
+	* configure.ac: Run SET_OS.
+
 2008-05-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am: Revert OpenJDK patches
